# kindling

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  et --soft HEAD~1
camera-front/: Dockerfile  (+6 more)
probe/: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  README.md  WORKSPACE  compile-probe.sh  go_deps.bzl
probe/bazel/: BUILD.bazel  kindling_probes.bzl
probe/cmake/modules/: agent-libs.cmake  bcc.cmake  perf.cmake
probe/cmake/modules/agent-libs-repo/: CMakeLists.txt
probe/deploy/: BUILD.bazel  docker-entrypoint.sh  gdb_print.sh  kindling-probe-loader  post_start.sh
probe/docker/: Dockerfile  docker-entrypoint.sh
probe/scripts/: .run_docker.sh.swp  run_docker.sh  run_docker_bpf_daemon.sh
probe/src/: CMakeLists.txt
probe/src/b64/: BUILD.bazel  cdecode.c  cencode.c  encode.h
probe/src/cgo/: KindlingInterface.h  catch_sig.cpp  catch_sig.h  cgo_func.cpp  cgo_func.h  defination.h  kindling.cpp  kindling.h  pagefaults.cpp  pagefaults.h  utils.cpp  utils.h
probe/src/common/: BUILD.bazel
probe/src/converter/: cpu_converter.cpp  cpu_converter.h  epoll_event_cache.cpp  epoll_event_cache.h  event_cache.cpp  event_cache.h  pagefaults_converter.cpp  pagefaults_converter.h
probe/src/driver/: BUILD.bazel  Makefile  driver_config.h  driver_config.h.in  dynamic_params_table.c  event_table.c  fillers_table.c  flags_table.c  main.c  ppm.h  ppm_cputime.c  ppm_events.c  ppm_events.h  ppm_events_public.h  ppm_fillers.c  ppm_fillers.h  syscall_table.c
probe/src/driver/bpf/: BUILD.bazel  filler_helpers.h  fillers.h  maps.h  plumbing_helpers.h  probe.c  quirks.h  types.h
probe/src/log/: log_info.cc  log_info.h
probe/src/probe/: BUILD.bazel  BUILD.bazel.bak  CMakeLists.txt  catch_sig.cpp  catch_sig.h  main.cpp  probe-build.sh  version.h  version.h.tmp
probe/src/probe/container/: BUILD.bazel  match_container.cpp  match_container.h
probe/src/probe/converter/: BUILD.bazel  converter.cpp  converter.h  kindling_event.proto  sysdig_converter.cpp  sysdig_converter.h  uprobe_converter.cpp  uprobe_converter.h
probe/src/probe/publisher/: BUILD.bazel  defination.h  publisher.cpp  publisher.h  subscribe.proto
probe/src/probe/standalone/: BUILD.bazel  README.md  qianlu.cc  standalone.cc
probe/src/probe/utils/: BUILD.bazel  shared_unordered_map.h  termination_handler.h
probe/src/profile/: flame_graph.cc  flame_graph.h  profiler.cc  profiler.h
probe/src/profile/bcc/: symbol.cc  symbol.h
probe/src/profile/perf/: perf.c  perf.h
probe/src/userspace/: sysdig.project
probe/src/userspace/async/: BUILD.bazel  async_key_value_source.h  async_key_value_source.hpp
probe/src/userspace/common/: BUILD.bazel
probe/src/userspace/libscap/: BUILD.bazel  scap-int.h  scap.c  scap.h  scap_bpf.c  scap_bpf.h  scap_event.c  scap_fds.c  scap_iflist.c  scap_procs.c  scap_savefile.c  scap_symbol.c  scap_symbol.h  scap_userlist.c  syscall_info_table.c  windows_hal.c  windows_hal.h
probe/src/userspace/libscap/compat/: BUILD.bazel  bpf.h  misc.h
probe/src/userspace/libsinsp/: BUILD.bazel  CMakeLists.txt  bpm.cpp  bpm.h  capture_stats_source.h  cgroup_limits.cpp  cgroup_limits.h  cgroup_list_counter.h  container.cpp  container.h  container_cache_interface.h  container_engine_base.cpp  container_engine_base.h  container_engine_cri.cpp  container_engine_cri.h  container_engine_mesos.cpp  container_engine_mesos.h  container_info.cpp  container_info.h  cri.cpp  cri.h  dns_manager.cpp  dns_manager.h  docker.h  docker_common.cpp  docker_linux.cpp  docker_win.cpp  dumper.cpp  event.cpp  event.h  eventformatter.cpp  eventformatter.h  fdinfo.cpp  fdinfo.h  filter.cpp  filter.h  filterchecks.cpp  filterchecks.h  gen_filter.cpp  grpc_channel_registry.cpp  (+41 more)
probe/src/userspace/libsinsp/include/: BUILD.bazel
probe/src/userspace/libsinsp/test/: CMakeLists.txt  sinsp.ut.cpp
probe/src/utils/: ring_buffer.h  ring_buffer_test.cpp  window_list.h
probe_cmake/src/: CMakeLists.txt
probe_cmake/src/cgo/: cgo_func.cpp  cgo_func.h  kindling.cpp  kindling_event.h
probe_cmake/src/util/: util.cpp  util.h
refactor/camera-agent-main/: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
refactor/camera-agent-main/config/: log4rs.yml
refactor/camera-agent-main/deploy/agent/: camera-front-configmap.yml  install.sh  kindling-deploy.yml  uninstall.sh
refactor/camera-agent-main/deploy/scripts/: build.sh  run_docker.sh
refactor/camera-agent-main/docker/: Dockerfile  Dockerfile.kindling-builder-Arm  Dockerfile.kindling-builder-x86  build-asyncprofiler.sh  kindling-probe-loader  start.sh
refactor/camera-agent-main/docker/config/: camera-agent-config.yml  log4rs.yml
refactor/camera-agent-main/protos/: kindling_p9x.proto  kindling_traceid.proto
refactor/camera-agent-main/src/: adhesive.rs  lib.rs  main.rs
refactor/camera-agent-main/src/camera_exporter/: camera_exporter.rs  config.rs  es_writer.rs  file_writer.rs  mod.rs
refactor/camera-agent-main/src/config/: mod.rs
refactor/camera-agent-main/src/controller/: api.rs  mod.rs
refactor/camera-agent-main/src/cpu_analyzer/: circle_queue.rs  cpu_analyzer.rs  mod.rs  model.rs  model_control.rs  tid_exit_clear.rs  time_aggregate.rs
refactor/camera-agent-main/src/kubernetes/: k8scache.rs  mod.rs
refactor/camera-agent-main/src/logger/: mod.rs  system_info_log.rs
refactor/camera-agent-main/src/metric_exporter/: log_exporter.rs  mod.rs
refactor/camera-agent-main/src/model/: consts.rs  mod.rs  model.rs
refactor/camera-agent-main/src/ntpsync/: mod.rs  ntpsync.rs
refactor/camera-agent-main/src/probe/: CMakeLists.txt
refactor/camera-agent-main/src/probe/cmake/modules/: agent-libs.cmake
refactor/camera-agent-main/src/probe_to_rust/: kindling_event.rs  mod.rs  rust_receiver.rs
refactor/camera-agent-main/src/sample_processor/: kindling_p9x.rs  kindling_p9x_grpc.rs  kindling_traceid.rs  kindling_traceid_grpc.rs  mod.rs  processor.rs  promethues.rs  sampler.rs
refactor/camera-agent-main/src/traceid_analyzer/: mod.rs  model.rs  traceid_analyzer.rs
refactor/camera-agent-main/tests/: unset_config.yml
(+844 files in other folders)
