load("@px//bazel:pl_build_system.bzl", "pl_cc_library")

package(default_visibility = ["//visibility:public"])

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.h",
            "*.cc",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    hdrs = ["inttypes_win.h"],
)
