
load("@px//bazel:pl_build_system.bzl", "pl_cc_library")

package(default_visibility = ["//src:__subpackages__"])



pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.h",
            "*.cc",
            "*.cpp",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    hdrs = glob(["*.h"]),
    copts = ["-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libscap", "-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libsinsp/third-party/jsoncpp", "-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libsinsp", "-Wno-unused-parameter","-Wno-ignored-qualifiers","-Wno-mismatched-tags","-Wno-unused-variable"],
    deps = [
        "//third_party:agent-libs_build",
	    "//third_party:zmq_build",
    ],
)
