load("@px//bazel:proto_compile.bzl", "pl_cc_proto_library", "pl_go_proto_library", "pl_proto_library")
load("@px//bazel:pl_build_system.bzl", "pl_cc_library")

package(default_visibility = ["//src:__subpackages__"])

pl_proto_library(
    name = "subscribe_pl_proto",
    srcs = ["subscribe.proto"],
    visibility = ["//src:__subpackages__"],
)

pl_cc_proto_library(
    name = "subscribe_pl_cc_proto",
    proto = ":subscribe_pl_proto",
    visibility = ["//src:__subpackages__"],
)


pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.h",
            "*.cc",
            "*.cpp",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    hdrs = glob(["*.h"]),
    copts = ["-Wno-unused-parameter","-Wno-ignored-qualifiers","-Wno-mismatched-tags","-Wno-unused-variable"],
    deps = [
        ":subscribe_pl_cc_proto",
        "//src/probe/converter:cc_library",
        "//src/probe/utils:cc_library",
        "@px//:px_headers",
        "@px//src/stirling:cc_library",
        "//src/userspace/libsinsp:cc_library",
	    "//third_party:zmq_build",
    ],
)
