load("@px//bazel:pl_build_system.bzl", "pl_cc_library")

package(default_visibility = ["//visibility:public"])

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.h",
            "*.cc",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    hdrs = ["shared_unordered_map.h"],
    copts = ["-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libscap", "-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libsinsp/third-party/jsoncpp", "-Ibazel-out/k8-fastbuild/bin/third_party/agent-libs_build/include/userspace/libsinsp", "-Wno-mismatched-tags"],
    deps = [
        "@px//src/common/signal:cc_library",
        "@px//:px_headers",
        "//third_party:agent-libs_build",
    ],
)
