load("@px//bazel:pl_build_system.bzl", "pl_cc_library")

package(default_visibility = ["//src:__subpackages__"])

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
	    "scap.c",
	    "scap_event.c",
	    "scap_fds.c",
	    "scap_iflist.c",
	    "scap_savefile.c",
	    "scap_procs.c",
	    "scap_userlist.c",
	    "scap_symbol.c",
	    "scap_bpf.c",
	    "syscall_info_table.c",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
        ],
    ),
    defines = ["PLATFORM_NAME=\\\"Linux\\\"","HAS_CAPTURE","HAVE_SYS_SYSMACROS_H"],
    linkopts = ["-lelf -lrt -lz"],
    copts = ["-Wno-unused-parameter", "-Wno-unused-function", "-Wno-unused-variable","-Wno-missing-field-initializers","-Wno-error=implicit-fallthrough","-Wno-error=float-conversion", "-Wno-error=pessimizing-move", "-Wno-error=type-limits","-Wno-error=implicit-function-declaration","-Wno-error=address-of-packed-member","-Wno-sign-compare","-Wno-unused-private-field","-Wno-mismatched-tags","-Wno-format-truncation","-Wno-class-memaccess"],
    hdrs = glob(["*.h"]),
    deps = [
        "//src/common:cc_library",
        "//src/userspace/libscap/compat:cc_library",
        "//src/driver:scap_cc_library",
	    "//src/driver/bpf:cc_library",
        ],
)
